testsuite/tests/typecheck/should_fail/T15801.stderr
T15801.hs:52:10: error: [GHC-18872]
    • Couldn't match representation of type: UnOp op_a -> UnOp b
                               with that of: op_a --> b
        arising (via a quantified constraint) from the superclasses of an instance declaration
      When trying to solve the quantified constraint
        forall (op_a :: Op (*)) (b :: Op (*)). op_a -#- b
        arising from the superclasses of an instance declaration
    • In the instance declaration for ‘OpRíki (Op (*))’

